implemented vue.js implementation with AJAX calls and RESTful API

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="./static/css/styles.css" rel="stylesheet" />
+
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -46,6 +47,7 @@
 
         {% block content %}
         {% endblock %}
+        
 
         <!-- Footer-->
         <footer class="footer text-center">
@@ -261,5 +263,8 @@
         <script src="./static/assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="./static/js/scripts.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        {% block scripts%} {% endblock%}
     </body>
 </html>
